kubernetes-controllers/dashboard/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: web
 annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: kubernetes-dashboard
spec:
 rules:
 - http:
    paths:
     - path: /dashboard(/|$)(.*)
       backend:
        serviceName: kubernetes-dashboard
        servicePort: 443
